networkpolicy/networkpolicy__basic_kafka_setup__mongodb__exception__system__egress__ports__443__nr33__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb--exception--system--egress--ports--443--nr33
  namespace: mongodb
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - protocol: TCP
      port: 443
